recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: type mismatch;
 found   : Double
 required: Int
X1=getX():Double
         ^Tree:9: error: type mismatch;
 found   : Double
 required: Int
X2=getY():Double
         ^